<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="5dp"
    android:background="@color/design_default_color_on_primary"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/chat"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:shadowColor="@android:color/black"
            android:text="@string/chat"
            android:textAllCaps="false"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/request_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/sniglet"
            android:textSize="12sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/name_text_input"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@+id/name_edit_text"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:layout_toStartOf="@+id/chat"
            android:padding="3dp"
            android:text="@string/message"
            android:textColor="#000000"
            android:textSize="12sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
