<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".view.ui.HomeFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/location"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/current_req"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:backgroundTint="@android:color/white"
        android:text="@string/press_to_choose_the_city"
        android:textAllCaps="false"
        android:textColor="@color/design_default_color_on_secondary"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/current_req"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/allerta"
        android:text="@string/current_requests"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh_requests"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/location"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="16dp"
            android:layoutAnimation="@anim/layout_animation"
            app:layout_constraintVertical_bias="1.0"
            tools:listitem="@layout/request_item" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <View
        android:id="@+id/no_items"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:background="@drawable/ic_baseline_list_alt_24"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/no_items_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/no_items"
        android:text="@string/no_requests_are_available_in_this_area"
        android:textColor="@color/design_default_color_on_secondary" />
</RelativeLayout>