<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colorful_background"
    tools:context=".view.ui.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/circle1"
            style="@style/white_background"
            android:layout_marginTop="104dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/circle2"
            style="@style/white_background"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/circle"
            style="@style/white_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.739"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/register_Progress"
            style="@style/progress_bar"
            app:layout_constraintBottom_toBottomOf="@+id/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxStrokeColor="@android:color/white"
            app:boxStrokeWidth="1dp"
            app:endIconMode="clear_text"
            app:hintTextColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                style="@style/text_field_style"
                android:background="@color/fui_transparent"
                android:drawableEnd="@drawable/ic_baseline_person_24"
                android:hint="@string/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@android:color/white"
            app:boxStrokeWidth="1dp"
            app:hintTextColor="@android:color/white"
            android:layout_marginTop="20dp"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                style="@style/text_field_style"
                android:background="@color/fui_transparent"
                android:drawableEnd="@drawable/ic_baseline_email_24"
                android:hint="@string/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:hintTextColor="@android:color/white"
            app:boxStrokeColor="@android:color/white"
            android:layout_marginTop="20dp"
            app:boxStrokeWidth="1dp"
            app:errorEnabled="true"
            app:endIconMode="password_toggle"
            app:endIconTint="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                style="@style/text_field_style"
                android:background="@color/fui_transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/appBar"
            android:padding="15dp"
            android:text="@string/register"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/go_to_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="@color/design_default_color_background" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/go_to_login"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:padding="15dp"
            android:text="@string/login_page"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            style="@style/header_text_style"
            android:text="@string/register"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>